--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.2",
+    "@astrojs/vercel": "^9.0.4",
     "@heroicons/react": "^2.2.0",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
