--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
   "installCommand": "npm ci",
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
-  "outputDirectory": "dist"
+  "outputDirectory": ".vercel/output/static"
 }
