Remove outputDirectory; use Astro Vercel output

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "installCommand": "npm ci",
   "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "outputDirectory": ".vercel/output/static"
+  "devCommand": "npm run dev"
 }
