--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "installCommand": "npm ci",
   "buildCommand": "npm run build",
-  "devCommand": "npm run dev"
+  "devCommand": "npm run dev",
+  "outputDirectory": "dist"
 }
